# fqtk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/scripts/: update-docs.sh
.github/workflows/: build_and_test.yml
ci/: check.sh
src/lib/: adapter_db.rs  barcode_matching.rs  base_quality.rs  bitenc.rs  fastq_stats.rs  mod.rs  moving_average.rs  pair_overlap.rs  read_set.rs  samples.rs
src/scripts/: precommit.sh
