[package]
authors = [
    "Nathan Roach <nathan@fulcrumgenomics.com>",
    "Tim Fennell <tim@fulcrumgenomics.com>",
    "Nils Homer <nils@fulcrumgenomics.com>"
]
name = "fqtk"
version = "0.2.2-rc.1"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fulcrumgenomics/fqtk"
repository = "https://github.com/fulcrumgenomics/fqtk"
description = "A toolkit for working with FASTQ files."
keywords = ["bioinformatics", "genomic"]
categories = ["science"]

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
name = "fqtk_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "fqtk"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
anyhow = "1.0.38"
bstr = "1.0.1"
clap = { version = "4.0.25", features = ["derive"] }
enum_dispatch = "0.3.8"
env_logger = "0.9.3"
fgoxide = "0.3.0"
flate2 = { version = "1.0.25", features = ["zlib-ng"] }  # Force the faster backend that requires a C compiler
itertools = "0.10.5"
log = "0.4.17"
mimalloc = { version = "0.1.32", default-features = false }
pooled-writer = "0.3.0"
read-structure = "0.1.0"
rstest="0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.1.2"
seq_io = "0.3.1"
thiserror = "1.0.37"
proglog = {version = "0.3.0", features = ["pretty_counts"] }

[dev-dependencies]
csv = "1.1.6"
tempfile = "3.3.0"
