[package]
authors = [
    "Nathan Roach <nathan@fulcrumgenomics.com>",
    "Tim Fennell <tim@fulcrumgenomics.com>",
    "Nils Homer <nils@fulcrumgenomics.com>"
]
name = "fqtk"
version = "0.3.2-rc.1"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fulcrumgenomics/fqtk"
repository = "https://github.com/fulcrumgenomics/fqtk"
description = "A toolkit for working with FASTQ files."
keywords = ["bioinformatics", "genomic"]
categories = ["science"]

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
name = "fqtk_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "fqtk"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
bstr = "1.12.1"
clap = { version = "4.6.0", features = ["derive"] }
enum_dispatch = "0.3.13"
env_logger = "0.11.10"
fgoxide = "0.6.0"
flate2 = { version = "1.1.9", features = ["zlib-ng"] }  # Force the faster backend that requires a C compiler
itertools = "0.14.0"
log = "0.4.29"
mimalloc = { version = "0.1.48", default-features = false }
pooled-writer = "0.4.0"
rand = "0.9"
rand_chacha = "0.9"
read-structure = "0.2.0"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
seq_io = "0.3.1"
thiserror = "2.0.18"
proglog = {version = "0.4.0", features = ["pretty_counts"] }

[dev-dependencies]
bgzf = "0.3.0"
csv = "1.1.6"
tempfile = "3.27.0"
